--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -3,7 +3,11 @@
         "pages/me/me",
         "pages/index/index",
         "pages/clock/clock",
-        "pages/ask/ask"
+        "pages/ask/ask",
+        "pages/admin/home/home",
+        "pages/user/updated/updated",
+        "pages/user/free/free",
+        "pages/user/idea/idea"
     ],
     "window": {
         "backgroundColor": "#F6F6F6",
