--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -4,10 +4,13 @@
         "pages/index/index",
         "pages/clock/clock",
         "pages/ask/ask",
-        "pages/admin/home/home",
         "pages/user/updated/updated",
         "pages/user/free/free",
-        "pages/user/idea/idea"
+        "pages/user/idea/idea",
+        "pages/admin/home/home",
+        "pages/admin/newArticle/newArticle",
+        "pages/details/publish/publish",
+        "pages/details/draft/draft"
     ],
     "window": {
         "backgroundColor": "#F6F6F6",
@@ -47,6 +50,9 @@
                 "text": "我的"
             }
         ]
+    },
+    "usingComponents": {
+        "mp-html": "/mp-html/index"
     },
     "sitemapLocation": "sitemap.json"
 }
