--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,59 +1,68 @@
 {
-	"pages": [
-		"pages/admin/people/people",
-		"pages/me/me",
-		"pages/index/index",
-		"pages/clock/clock",
-		"pages/ask/ask",
-		"pages/user/updated/updated",
-		"pages/user/free/free",
-		"pages/user/idea/idea",
-		"pages/admin/home/home",
-		"pages/admin/newArticle/newArticle",
-		"pages/details/publish/publish",
-		"pages/details/draft/draft"
-	],
-	"window": {
-		"backgroundColor": "#F6F6F6",
-		"backgroundTextStyle": "light",
-		"navigationBarBackgroundColor": "#A5D63F",
-		"navigationBarTitleText": "时光录",
-		"navigationBarTextStyle": "white"
-	},
-	"tabBar": {
-		"color": "#9BABBA",
-		"selectedColor": "#A5D63F",
-		"borderStyle": "white",
-		"backgroundColor": "#ffffff",
-		"list": [
-			{
-				"pagePath": "pages/index/index",
-				"iconPath": "images/index.png",
-				"selectedIconPath": "images/index-selected.png",
-				"text": "首页"
-			},
-			{
-				"pagePath": "pages/clock/clock",
-				"iconPath": "images/clock.png",
-				"selectedIconPath": "images/clock-selected.png",
-				"text": "时钟"
-			},
-			{
-				"pagePath": "pages/ask/ask",
-				"iconPath": "images/ask.png",
-				"selectedIconPath": "images/ask-selected.png",
-				"text": "寻问"
-			},
-			{
-				"pagePath": "pages/me/me",
-				"iconPath": "images/me.png",
-				"selectedIconPath": "images/me-selected.png",
-				"text": "我的"
-			}
-		]
-	},
-	"usingComponents": {
-		"mp-html": "/mp-html/index"
-	},
-	"sitemapLocation": "sitemap.json"
+    "pages": [
+        "pages/clock/clock",
+        "pages/index/index",
+        "pages/column/column",
+        "pages/me/me",
+        "pages/ask/ask",
+        "pages/user/updated/updated",
+        "pages/user/free/free",
+        "pages/user/idea/idea",
+        "pages/admin/home/home",
+        "pages/admin/newArticle/newArticle",
+        "pages/admin/people/people",
+        "pages/details/publish/publish",
+        "pages/details/draft/draft",
+        "components/kindList/kindList",
+        "components/articleInfo/articleInfo"
+    ],
+    "window": {
+        "backgroundColor": "#F6F6F6",
+        "backgroundTextStyle": "light",
+        "navigationBarBackgroundColor": "#A5D63F",
+        "navigationBarTitleText": "时光录",
+        "navigationBarTextStyle": "white"
+    },
+    "tabBar": {
+        "color": "#9BABBA",
+        "selectedColor": "#efb336",
+        "borderStyle": "white",
+        "backgroundColor": "#ffffff",
+        "list": [
+            {
+                "pagePath": "pages/index/index",
+                "iconPath": "images/index.png",
+                "selectedIconPath": "images/index-selected.png",
+                "text": "首页"
+            },
+            {
+                "pagePath": "pages/column/column",
+                "iconPath": "images/column.png",
+                "selectedIconPath": "images/column-selected.png",
+                "text": "专栏"
+            },
+            {
+                "pagePath": "pages/clock/clock",
+                "iconPath": "images/clock.png",
+                "selectedIconPath": "images/clock-selected.png",
+                "text": "时钟"
+            },
+            {
+                "pagePath": "pages/ask/ask",
+                "iconPath": "images/ask.png",
+                "selectedIconPath": "images/ask-selected.png",
+                "text": "寻问"
+            },
+            {
+                "pagePath": "pages/me/me",
+                "iconPath": "images/me.png",
+                "selectedIconPath": "images/me-selected.png",
+                "text": "我的"
+            }
+        ]
+    },
+    "usingComponents": {
+        "mp-html": "/mp-html/index"
+    },
+    "sitemapLocation": "sitemap.json"
 }
